--- a/.github/workflows/ci-behave.yml
+++ b/.github/workflows/ci-behave.yml
@@ -4,13 +4,14 @@ name: CI/CD - Behave UI Tests
 
 on:
   push:
-    branches: [ main, tests ]
+    branches: [ main, develop ]
   pull_request:
     branches: [ main, develop ]
   workflow_dispatch:
+
 permissions:
   contents: write
-  pages: write 
+  pages: write
   id-token: write
 
 jobs:
@@ -24,35 +25,41 @@ jobs:
     - name: Set up Python environment
       uses: actions/setup-python@v5
       with:
-        python-version: '3.9'
+        python-version: '3.9' # Specify your Python version
+
     - name: Install Python dependencies
       run: |
-        python -m pip install --upgrade pip # Upgrade pip
-        pip install -r requirements.txt      # Install your project's dependencies
-        # Install Allure Commandline - essential for generating Allure HTML reports
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        # allure-commandline is installed via apt-get for Ubuntu runners
         sudo apt-get update
         sudo apt-get install -y allure-commandline
 
     - name: Run Behave tests and generate raw Allure results
       run: behave -f allure_behave.formatter:AllureFormatter -o allure-results/ ./features/ || true
 
-    - name: Generate Allure Report and History
-      uses: simple-elf/allure-action@v1.4.1
-      if: always()
+    - name: Generate and Deploy Allure Report to GitHub Pages
+      # --- REPLACE THE PREVIOUS simple-elf/allure-action STEP WITH THIS ---
+      uses: allure-framework/allure-action@v2 # Using the official Allure Action
+      if: always() # Always run this step, even if tests failed, to get a report
       with:
-        allure_results_folder: allure-results
-        allure_report_folder: allure-report
-        allure_history_folder: allure-history
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        allure_report_url: https://your-username.github.io/Project-SauceDemo/
-
+        allure_results_folder: allure-results # Path to your raw Allure results
+        allure_report_folder: allure-report   # Output folder for the generated HTML report
+        allure_history_folder: allure-history # Optional: for trends and history
+        github_token: ${{ secrets.GITHUB_TOKEN }} # Built-in token
+        allure_report_url: https://your-username.github.io/Project-SauceDemo/ # <--- ***UPDATE THIS LINE***
+        keep_history: true # Recommended for trends over time
+        # The official action automatically handles the generation and provides output for Pages.
+        
     - name: Setup GitHub Pages
       uses: actions/configure-pages@v5
 
     - name: Upload Allure Report Artifact for Pages Deployment
+      # The 'path' here should be the folder where the allure-action generates its report
       uses: actions/upload-pages-artifact@v3
       with:
-        path: allure-report 
+        path: allure-report # This should match allure_report_folder above
+
     - name: Deploy to GitHub Pages
       id: deployment
       uses: actions/deploy-pages@v4
