--- a/.github/workflows/ci-behave.yml
+++ b/.github/workflows/ci-behave.yml
@@ -26,10 +26,9 @@ jobs:
     - name: Set up Python environment
       uses: actions/setup-python@v5 # Action to set up Python
       with:
-        python-version: '3.12' # Recommended: Change to '3.12' for better runner compatibility.
-                               # If '3.13' works fine, keep it.
+        python-version: '3.12' # Recommended: '3.12' for better runner compatibility. (If '3.13' works fine for you, keep it.)
 
-    - name: Install Python dependencies
+    - name: Install Python dependencies & Allure Commandline
       run: |
         python -m pip install --upgrade pip # Upgrade pip
         pip install -r requirements.txt      # Install your project's dependencies
@@ -43,29 +42,23 @@ jobs:
       # allowing the Allure report generation step to still run.
       run: behave -f allure_behave.formatter:AllureFormatter -o allure-results/ ./features/ || true
 
-    - name: Generate Allure Report and History
-      # This action generates the interactive HTML report from the raw results
-      # and handles the history for trend analysis in Allure.
-      uses: allure-framework/allure-action@5d73ab37877b34f5bebfad475175af8cc908f301 # Using the specific commit SHA for stability
-      if: always() # Always run this step, even if tests failed, to get a report
-      with:
-        allure_results_folder: allure-results  # Input: folder with raw Allure data from previous step
-        allure_report_folder: allure-report    # Output: folder where HTML report will be generated
-        allure_history_folder: allure-history  # Optional: for trends/history in Allure reports
-        github_token: ${{ secrets.GITHUB_TOKEN }} # Built-in token, automatically available
-        # CRITICAL FIX: This URL should be your GitHub Pages domain, not the repository URL.
-        allure_report_url: https://void-craft.github.io/SauceDemo-Selenium-BDD/ # <--- ***CORRECTED URL***
-        keep_history: true # Recommended for trends in Allure report
+    - name: Generate Allure HTML Report
+      # --- NEW STEP: Explicitly generate the HTML report using the installed allure-commandline ---
+      # '--clean' removes previous report artifacts before generating new ones.
+      # '-o allure-report/' specifies the output directory for the HTML report.
+      run: allure generate --clean allure-results/ -o allure-report/
+      if: always() # Always run this step, even if tests failed, to ensure report generation
 
+    # --- Standard GitHub Pages Deployment Actions ---
     - name: Setup GitHub Pages
       # Configures the GitHub Pages environment
       uses: actions/configure-pages@v5
 
     - name: Upload Allure Report Artifact for Pages Deployment
-      # Uploads the generated HTML report as an artifact ready for GitHub Pages
+      # Uploads the generated HTML report (from 'allure-report/') as an artifact ready for GitHub Pages
       uses: actions/upload-pages-artifact@v3
       with:
-        path: allure-report # The folder containing the generated HTML report from previous step
+        path: allure-report # This is the folder containing the generated HTML report
 
     - name: Deploy to GitHub Pages
       # Deploys the uploaded artifact to your GitHub Pages site
