--- a/.github/workflows/ci-behave.yml
+++ b/.github/workflows/ci-behave.yml
@@ -16,7 +16,7 @@ permissions:
 
 jobs:
   build-and-test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
     - name: Checkout code
@@ -25,12 +25,12 @@ jobs:
     - name: Set up Python environment
       uses: actions/setup-python@v5
       with:
-        python-version: '3.12' # Recommended: '3.12' for better runner compatibility.
+        python-version: '3.12'
 
     - name: Install Python dependencies & Allure Commandline
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt      # Install your project's dependencies
+        pip install -r requirements.txt
         
         sudo apt-get update                                 
         sudo apt-get install -y software-properties-common   
