--- a/.github/workflows/ci-behave.yml
+++ b/.github/workflows/ci-behave.yml
@@ -16,7 +16,7 @@ permissions:
 
 jobs:
   build-and-test:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-22.04 # This should now be correct
 
     steps:
     - name: Checkout code
@@ -25,18 +25,27 @@ jobs:
     - name: Set up Python environment
       uses: actions/setup-python@v5
       with:
-        python-version: '3.12'
+        python-version: '3.12' 
 
     - name: Install Python dependencies & Allure Commandline
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r requirements.txt      
         
-        sudo apt-get update                                 
-        sudo apt-get install -y software-properties-common   
-        sudo add-apt-repository ppa:qameta/allure           
-        sudo apt-get update                                  
-        sudo apt-get install -y allure-commandline
+        # --- FIX: Update ALLURE_VERSION to the latest (2.34.1) ---
+        ALLURE_VERSION="2.34.1" # <--- UPDATE THIS LINE
+        ALLURE_DOWNLOAD_URL="https://github.com/allure-framework/allure2/releases/download/${ALLURE_VERSION}/allure-commandline-${ALLURE_VERSION}.zip"
+        ALLURE_INSTALL_DIR="/opt/allure"
+        
+        echo "Downloading Allure Commandline from ${ALLURE_DOWNLOAD_URL}..."
+        curl -L "${ALLURE_DOWNLOAD_URL}" -o allure.zip
+        
+        sudo mkdir -p "${ALLURE_INSTALL_DIR}"
+        sudo unzip allure.zip -d "${ALLURE_INSTALL_DIR}"
+        
+        echo "${ALLURE_INSTALL_DIR}/allure-commandline-${ALLURE_VERSION}/bin" >> $GITHUB_PATH
+        echo "Allure Commandline ${ALLURE_VERSION} installed to ${ALLURE_INSTALL_DIR}"
+        # -----------------------------------------------------------
 
     - name: Run Behave tests and generate raw Allure results
       run: behave -f allure_behave.formatter:AllureFormatter -o allure-results/ ./features/ || true
