--- a/.github/workflows/ci-behave.yml
+++ b/.github/workflows/ci-behave.yml
@@ -2,9 +2,9 @@ name: CI/CD - Behave UI Tests
 
 on:
   push:
-    branches: [ main, test ]
+    branches: [main, test]
   pull_request:
-    branches: [ main, test ]
+    branches: [main, test]
   workflow_dispatch:
 
 permissions:
@@ -31,7 +31,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Install Allure Commandline
+    - name: Install Allure Commandline (fixed path)
       run: |
         ALLURE_VERSION=2.24.1
         ALLURE_URL="https://github.com/allure-framework/allure2/releases/download/$ALLURE_VERSION/allure-$ALLURE_VERSION.zip"
@@ -39,10 +39,16 @@ jobs:
         echo "Downloading Allure from $ALLURE_URL"
         curl -L "$ALLURE_URL" -o allure.zip
         unzip allure.zip -d allure
-        echo "$GITHUB_WORKSPACE/allure/bin" >> $GITHUB_PATH
+        echo "$(pwd)/allure/allure-$ALLURE_VERSION/bin" >> $GITHUB_PATH
         rm allure.zip
+        allure --version
 
-    - name: Run Behave tests
+    - name: Clear any existing WebDriver processes
+      run: |
+        pkill -f chromedriver || true
+        pkill -f geckodriver || true
+
+    - name: Run Behave tests with Allure reporting
       run: |
         behave -f allure_behave.formatter:AllureFormatter -o allure-results/ ./features/ || true
 
@@ -50,7 +56,6 @@ jobs:
       if: always()
       run: |
         allure generate allure-results --clean -o allure-report
-        allure open allure-report
 
     - name: Upload Allure report as artifact
       if: always()
@@ -60,14 +65,9 @@ jobs:
         path: allure-report
         retention-days: 7
 
-    - name: Setup Pages
-      uses: actions/configure-pages@v4
-
-    - name: Upload Pages artifact
+    - name: Deploy to GitHub Pages
+      if: github.ref == 'refs/heads/main'
       uses: actions/upload-pages-artifact@v3
       with:
         path: allure-report
-
-    - name: Deploy to GitHub Pages
-      if: github.ref == 'refs/heads/main'
-      uses: actions/deploy-pages@v4
+      # Then add the deploy-pages step if you have Pages enabled
