--- a/.github/workflows/ci-behave.yml
+++ b/.github/workflows/ci-behave.yml
@@ -1,96 +1,164 @@
-# .github/workflows/ci-behave.yml
-
-name: CI/CD - Behave UI Tests
+name: Selenium BDD Tests
 
 on:
   push:
-    branches: [ main, test ]
+    branches: [ main, develop ]
   pull_request:
-    branches: [ main, test ]
-  workflow_dispatch:
-
-permissions:
-  contents: write
-  pages: write
-  id-token: write
+    branches: [ main, develop ]
+  schedule:
+    # Run tests daily at 2 AM UTC
+    - cron: '0 2 * * *'
 
 jobs:
-  test: # Changed job name from build-and-test, which is fine
-    runs-on: ubuntu-22.04
-    timeout-minutes: 15 # Added timeout, good practice
-
+  test:
+    runs-on: ubuntu-latest
+    
+    strategy:
+      matrix:
+        python-version: [3.9, 3.10, 3.11]
+        browser: [chrome, firefox]
+    
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-
-    - name: Set up Python 3.12
-      uses: actions/setup-python@v5
+    
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v4
       with:
-        python-version: '3.12'
-
+        python-version: ${{ matrix.python-version }}
+    
+    - name: Cache pip dependencies
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+    
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-
-    - name: Install Allure Commandline (fixed path)
+        # Install additional dependencies for CI
+        pip install allure-behave
+    
+    - name: Set up Chrome and ChromeDriver
+      if: matrix.browser == 'chrome'
+      uses: browser-actions/setup-chrome@v1
+      with:
+        chrome-version: stable
+    
+    - name: Set up Firefox and GeckoDriver
+      if: matrix.browser == 'firefox'
+      uses: browser-actions/setup-firefox@v1
+      with:
+        firefox-version: latest
+    
+    - name: Setup display for headless mode
       run: |
-        ALLURE_VERSION="2.34.1" # <--- Confirmed from your screenshot
-        # --- FIX: Correct the download URL and local ZIP name ---
-        # The asset name is allure-2.34.1.zip
-        # The path it is often under in releases is /download/allure-2.34.1/
-        ALLURE_DOWNLOAD_URL="https://github.com/allure-framework/allure2/releases/download/allure-${ALLURE_VERSION}/allure-${ALLURE_VERSION}.zip"
-        ALLURE_ZIP_FILE="allure-${ALLURE_VERSION}.zip" # Local name for the downloaded zip
-        ALLURE_INSTALL_DIR="${HOME}/allure" # Where we will unzip it to
-        
-        echo "Downloading Allure from ${ALLURE_DOWNLOAD_URL}"
-        curl -fsSL --retry 5 --retry-delay 5 "${ALLURE_DOWNLOAD_URL}" -o "${ALLURE_ZIP_FILE}"
-        
-        # Check if download was successful
-        if [ ! -s "${ALLURE_ZIP_FILE}" ]; then
-          echo "Error: ${ALLURE_ZIP_FILE} was not downloaded successfully or is empty."
-          exit 1
-        fi
-        
-        # Create installation directory and unzip (ensure to unzip the correct file name)
-        mkdir -p "${ALLURE_INSTALL_DIR}"
-        # Unzip command needs the downloaded file name, and then specify target directory
-        unzip "${ALLURE_ZIP_FILE}" -d "${ALLURE_INSTALL_DIR}"
-        
-        # Add Allure bin directory to PATH (the unzipped folder structure is usually 'allure/allure-X.Y.Z/bin')
-        # Based on your unzip output "creating: allure/allure-2.24.1/", the path will be allure/allure-VERSION/bin
-        echo "${ALLURE_INSTALL_DIR}/allure/allure-${ALLURE_VERSION}/bin" >> $GITHUB_PATH
-        echo "Allure Commandline ${ALLURE_VERSION} installed to ${ALLURE_INSTALL_DIR}/allure/allure-${ALLURE_VERSION}/"
-        
-        # Clean up the downloaded zip file
-        rm "${ALLURE_ZIP_FILE}"
-
-    # Adding pkill lines (from your provided code) for robustness, although often not strictly needed on clean runners
-    - name: Clear any existing WebDriver processes
+        sudo apt-get update
+        sudo apt-get install -y xvfb
+        export DISPLAY=:99
+        Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
+    
+    - name: Create necessary directories
       run: |
-        pkill -f chromedriver || true
-        pkill -f geckodriver || true
-
-    - name: Run Behave tests with Allure reporting
-      run: behave -f allure_behave.formatter:AllureFormatter -o allure-results/ ./features/ || true
-
+        mkdir -p allure_reports/screenshots
+        mkdir -p test-results
+        mkdir -p allure-results
+      run: |
+        # Set browser environment variable
+        export BROWSER=${{ matrix.browser }}
+        
+        # Run tests with JUnit output for better reporting
+        behave --junit --junit-directory=test-results features/
+      env:
+        BROWSER: ${{ matrix.browser }}
+        HEADLESS: true
+        DISPLAY: :99
+    
+    - name: Upload test results
+      uses: actions/upload-artifact@v3
+      if: always()
+      with:
+        name: test-results-${{ matrix.python-version }}-${{ matrix.browser }}
+        path: test-results/
+    
+    - name: Upload screenshots on failure
+      uses: actions/upload-artifact@v3
+      if: failure()
+      with:
+        name: screenshots-${{ matrix.python-version }}-${{ matrix.browser }}
+        path: allure_reports/screenshots/
+    
     - name: Generate Allure report
       if: always()
       run: |
+        # Install Allure commandline tool
+        curl -o allure-2.24.0.tgz -Ls https://repo.maven.apache.org/maven2/io/qameta/allure/allure-commandline/2.24.0/allure-commandline-2.24.0.tgz
+        tar -zxvf allure-2.24.0.tgz
+        sudo mv allure-2.24.0/bin/allure /usr/local/bin/
+        sudo mv allure-2.24.0/lib /usr/local/lib/allure
+        
+        # Generate Allure report
         allure generate allure-results --clean -o allure-report
-
-    - name: Upload Allure report as artifact
+    
+    - name: Upload Allure report
+      uses: actions/upload-artifact@v3
       if: always()
-      uses: actions/upload-artifact@v4
       with:
-        name: allure-report
-        path: allure-report
-        retention-days: 7
+        name: allure-report-${{ matrix.python-version }}-${{ matrix.browser }}
+        path: allure-report/
+    
+    - name: Publish test results
+      uses: EnricoMi/publish-unit-test-result-action@v2
+      if: always()
+      with:
+        files: test-results/*.xml
+        check_name: "Test Results (${{ matrix.python-version }}, ${{ matrix.browser }})"
 
-    - name: Deploy to GitHub Pages
-      if: github.ref == 'refs/heads/main' # Only deploy from main branch (good practice)
-      uses: actions/upload-pages-artifact@v3
+  # Optional: Deploy test reports to GitHub Pages
+  deploy-reports:
+    needs: test
+    runs-on: ubuntu-latest
+    if: always() && github.ref == 'refs/heads/main'
+    
+    steps:
+    - name: Download test artifacts
+      uses: actions/download-artifact@v3
       with:
-        path: allure-report
-      # This step should be followed by actions/deploy-pages@v4, which is outside this snippet.
-      # Ensure you have it correctly after this upload-pages-artifact step.
+        path: artifacts
+    
+    - name: Create reports directory
+      run: |
+        mkdir -p reports
+        # Combine all test results
+        find artifacts -name "*.xml" -exec cp {} reports/ \;
+    
+    - name: Deploy to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
+      if: github.ref == 'refs/heads/main'
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./reports
+        destination_dir: test-reports
+
+  # Slack notification (optional)
+  notify:
+    needs: test
+    runs-on: ubuntu-latest
+    if: always()
+    
+    steps:
+    - name: Slack Notification
+      uses: 8398a7/action-slack@v3
+      if: failure()
+      with:
+        status: ${{ job.status }}
+        channel: '#ci-cd'
+        webhook_url: ${{ secrets.SLACK_WEBHOOK }}
+        message: |
+          Selenium BDD Tests failed!
+          Branch: ${{ github.ref }}
+          Commit: ${{ github.sha }}
+          Author: ${{ github.actor }}
